# pants-example

./: .gitignore  BUILD  README.md  pants.toml  pyproject.toml  setup.cfg
app/: BUILD  app.py  no_addtional_args_failure.py  on_change.py  on_change_failure.py
app/module_1/: BUILD  example.py  transitive.py
app/module_2/: BUILD  __init__.py  a.py  another.py  b.py  c.py  example.py  lib.py
app/module_3/: BUILD  a.py  b.py  c.py  wildimport.py
app/module_4/: BUILD  __init__.py  a.py  again.py  b.py  c.py  crazy.py
app/module_5/: rexport.py  rexport_1.py
app/module_common/: BUILD  utils.py
app/some.path.com/: BUILD
pants-plugins/: BUILD
pants-plugins/build_file_defaults/: BUILD  build_file_defaults.py  register.py  rules.py
pants-plugins/changer/: register.py  rules.py  subsystem.py  utils.py
pants-plugins/custom_autoflake/: BUILD  register.py  rules.py  subsystem.py
pants-plugins/custom_black/: register.py  rule.py  skip_field.py
pants-plugins/custom_flake8/: register.py  rule.py  skip_field.py
pants-plugins/custom_infer/: BUILD  options.py  register.py  rules.py  test_rules.py
pants-plugins/custom_isort/: BUILD  register.py  rules.py  skip_field.py
pants-plugins/custom_tailor/: custom_tailor.py  register.py  rules.py
pants-plugins/find_needle/: find_needle.py  register.py  rules.py  test_rules.py
pants-plugins/import_fixer/: BUILD  autoflake_rules.py  cross_imports_rules.py  cross_imports_rules_param_types.py  import_fixer.py  indirect_imports_rules.py  indirect_imports_rules_param_types.py  register.py  wildcard_imports_rules.py  wildcard_imports_rules_param_types.py
pants-plugins/pre_checks/: pre_checks.py  register.py  (+4 more)
(+42 files in other folders)
